WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129506
Web Inspector: ObjC exception opening the Web Inspector in Production / nightly builds
https://bugs.webkit.org/show_bug.cgi?id=129506
Summary
Web Inspector: ObjC exception opening the Web Inspector in Production / night...
Timothy Hatcher
Reported
2014-02-28 13:42:52 PST
<
rdar://problem/16199363
>
Attachments
Patch
(5.84 KB, patch)
2014-02-28 13:48 PST
,
Timothy Hatcher
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Timothy Hatcher
Comment 1
2014-02-28 13:43:06 PST
ObjC exception: -[NSURL initFileURLWithPath:]: nil string parameter
Timothy Hatcher
Comment 2
2014-02-28 13:48:46 PST
Created
attachment 225488
[details]
Patch
Joseph Pecoraro
Comment 3
2014-02-28 14:14:37 PST
Comment on
attachment 225488
[details]
Patch Looks fine. r=me
WebKit Commit Bot
Comment 4
2014-02-28 14:46:12 PST
Comment on
attachment 225488
[details]
Patch Clearing flags on attachment: 225488 Committed
r164884
: <
http://trac.webkit.org/changeset/164884
>
WebKit Commit Bot
Comment 5
2014-02-28 14:46:14 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug